crates/carta/tests/snapshots/golden_writer__asciidoc__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
____
quoted

more lines here
____
