crates/carta/tests/snapshots/golden_writer__asciidoc__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[source,rust]
----
let s = "hi";
x < y && y > z
----
