crates/carta/tests/snapshots/golden_writer__asciidoc__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[NOTE]
====
be careful here
====
