crates/carta/tests/snapshots/golden_writer__asciidoc__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[[d]]
[NOTE]
====
body paragraph
====
