crates/carta/tests/snapshots/golden_writer__asciidoc__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
*bold* opens the line

++*++literal star
