crates/carta/tests/snapshots/golden_writer__asciidoc__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
_see http://example.com[text] here_
