crates/carta/tests/snapshots/golden_writer__asciidoc__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
a ++*++ b ++`++ c ++|++ d and trailing++_++ref++_++
