crates/carta/tests/snapshots/golden_writer__asciidoc__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
xfootnote:[first] yfootnote:[second]
