crates/carta/tests/snapshots/golden_writer__asciidoc__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[verse]
--
first line
second line
--
