crates/carta/tests/snapshots/golden_writer__asciidoc__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
before http://example.com[] after
